Assets/CSS/calendar.css
.input_calendar_vfz_outer_wrap,
.input_calendar_vfz_outer_wrap * {
    box-sizing: border-box;
}

.input_calendar_vfz_outer_wrap {
    /* ADD MY OWN CSS */
    --calendar-background-color: white;
    --calendar-header-month-text-color: black;
    --calendar-header-year-text-color: black;
    --calendar-header-weekdays-text-color: black;
    --calendar-header-weekdays-border-color: black;
    --calendar-body-day-text-color: black;
    --calendar-body-year-text-color: black;
    --calendar-header-font-size: 22px;
    --calendar-header-year-font-size: 20px;
    --calendar-header-weekDays-font-size: 20px;
    --calendar-day-font-size: 20px;
    --calendar-year-font-size: 18px;

    --calendar-current-day-color: white;
    --calendar-current-day-bg: grey;

    --calendar-active-day-color: white;
    --calendar-active-day-bg: rgb(0, 114, 9);

    --calendar-active-year-color: white;
    --calendar-active-year-bg: rgb(0, 114, 9);


    display: block;
    position: absolute;
    top: 100%;
    left: 0;
    color: var(--calendar-text-color);
    opacity: 1;
    visibility: visible;
    overflow: visible;
    z-index: 10000;
}

.input_calendar_vfz_outer_wrap .calendar_vfz_cursor_to_follow {
    position: absolute;
    display: block;
    width: 10px;
    height: 10px;
    top: 0;
    left: 0;
    background-color: rgba(70, 69, 69, 0.8);
    color: white;
    filter: blur(10px);
    opacity: 0.8;
    visibility: visible;
    border-radius: 50%;
    pointer-events: none;
    padding: 5px 10px;
    z-index: -1;
    transform: translate(-50%, -50%);
}

.input_calendar_vfz_outer_wrap.calendar_vfz_close_status,
.calendar_vfz_overlay_for_mobile.calendar_vfz_close_status,
.input_calendar_vfz_outer_wrap .calendar_vfz_close_status {
    user-select: none;
    opacity: 0 !important;
    visibility: hidden !important;
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_inner_calendar {
    visibility: visible;
    background: white;
    opacity: 1;
    border: 1px solid #ccc;
    padding: 10px;
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap {
    position: relative;
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_month_wrap {
    display: flex;
    flex-direction: column;
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_month_header_wrap {}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_month_header_title_outer_wrap {
    display: flex;
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_nav_arrow.calendar_vfz_disable_arrow {
    user-select: none !important;
    opacity: 0;
    visibility: none;
    cursor: auto !important;
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_header_left_arrow_wrap,
.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_header_right_arrow_wrap {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 4px 3px;
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .input_calendar_vfz_right_arrow .input_calendar_vfz_arrow_image {
    transform: rotateY(180deg);
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .input_calendar_vfz_left_arrow,
.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .input_calendar_vfz_right_arrow {
    cursor: pointer;
    user-select: none;
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .input_calendar_vfz_arrow_image {
    width: 35px;
    padding: 3px;
}

/* SVG */
.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .input_calendar_vfz_arrow_image .st2 {
    fill: black;
    transition: fill 0.3s;
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .input_calendar_vfz_arrow_image:hover .st2 {
    fill: red;
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_month_header_title_wrap {
    flex: 1 1;
    display: flex;
    flex-direction: column;
    font-size: var(--calendar-header-font-size);
    text-align: center;
    margin-bottom: 5px;
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_month_header_title {
    flex: 1 1;
    color: var(--calendar-header-month-text-color);
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_year_header_title_wrap {
    color: var(--calendar-header-year-text-color);
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_year_header_title {
    flex: 1 1;
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_year_header_title.calendar_vfz_clickable {
    cursor: pointer;
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_month_header {
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    border-top: 2px solid var(--calendar-header-weekdays-border-color);
    border-bottom: 2px solid var(--calendar-header-weekdays-border-color);
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_day_header {
    color: var(--calendar-header-weekdays-text-color);
    text-align: center;
    font-weight: bold;
    font-size: var(--calendar-header-weekDays-font-size);
    padding: 2px;
}

/* BODY CALENDAR */
.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_month_body {
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    gap: 2px;
    color: var(--calendar-body-day-text-color);
    margin-top: 2px;
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_day {
    position: relative;
    display: block;
    font-size: var(--calendar-day-font-size);
    text-align: center;
    border-radius: 4px;
    padding: 4px;
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_day.calendar_vfz_clickable {
    position: relative;
    display: block;
    font-size: var(--calendar-day-font-size);
    text-align: center;
    border-radius: 4px;
    cursor: pointer;
    user-select: none;
    padding: 4px;
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_day.calendar_vfz_current_day,
.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_day.calendar_vfz_clickable.calendar_vfz_current_day {
    background-color: var(--calendar-current-day-bg);
    color: var(--calendar-current-day-color);
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_day.calendar_vfz_active_day,
.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_day.calendar_vfz_clickable.calendar_vfz_active_day {
    background-color: var(--calendar-active-day-bg);
    color: var(--calendar-active-day-color);
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_day.calendar_vfz_disabled_day {
    color: grey;
    text-decoration: line-through;
    background-color: transparent;
}

.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_day.calendar_vfz_next_month_day,
.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_day.calendar_vfz_prev_month_day {
    color: rgba(169, 169, 169, 0.5);
    background-color: transparent;
}


/* HELPER WRAP */
.input_calendar_vfz_outer_wrap .calendar_vfz_wrap_helper {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: -1;
}

.input_calendar_vfz_outer_wrap .calendar_vfz_helper_body_wrap {
    position: relative;
    display: block;
    width: 100%;
    height: 100%;
}

.input_calendar_vfz_outer_wrap:hover .calendar_vfz_today_button_wrap.calendar_vfz_activate_today_btn {
    transform: translate(-50%, 100%);
}

.input_calendar_vfz_outer_wrap .calendar_vfz_today_button_wrap {
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translate(-50%, 0);
    transition: transform 0.4s;
}


/* YEARS WRAP */
.input_calendar_vfz_outer_wrap .calendar_vfz_years_wrap {
    position: absolute;
    display: block;
    background: #EDEDED;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    overflow-y: auto;
    visibility: visible;
    opacity: 1;
    z-index: 1;
    transform: scale(1);
}

.input_calendar_vfz_outer_wrap .calendar_vfz_years_wrap.calendar_vfz_close_status {
    transform: scale(0);
}

/* FIREFOX SCROLLBAR CUSTOMIZATION */
.input_calendar_vfz_outer_wrap .calendar_vfz_years_wrap.firefox-scroll {
    scrollbar-width: thin;
    scrollbar-color: #aaa transparent;
}

/* SCROLLBAR FOR WEBKIT BROWSERS (CHROME, SAFARI, EDGE) */
.input_calendar_vfz_outer_wrap .calendar_vfz_years_wrap::-webkit-scrollbar {
    width: 5px;
}

/* SCROLLBAR THUMB (THE DRAGGABLE PART) */
.input_calendar_vfz_outer_wrap .calendar_vfz_years_wrap::-webkit-scrollbar-thumb {
    background-color: transparent;
    border-radius: 4px;
    border: 0px solid transparent;
    cursor: pointer;
    transition: all 0.3s;
}

/* SCROLLBAR THUMB HOVER EFFECT */
.input_calendar_vfz_outer_wrap .calendar_vfz_years_wrap::-webkit-scrollbar-thumb:hover {
    background-color: #585858;
}

.calendar_vfz_years_wrap:hover::-webkit-scrollbar-thumb {
    background-color: #aaa;
}

/* SCROLLBAR TRACK (BACKGROUND) */
.input_calendar_vfz_outer_wrap .calendar_vfz_years_wrap::-webkit-scrollbar-track {
    background-color: transparent;
    border-radius: 4px;
}

/* SCROLLBAR STYLING FOR EDGE/INTERNET EXPLORER */
/* CUSTOMIZE THE SCROLLBAR FOR EDGE/IE BROWSERS */
.input_calendar_vfz_outer_wrap .calendar_vfz_years_wrap::-ms-scrollbar {
    width: 5px;
}

/* SCROLLBAR THUMB STYLING FOR EDGE/IE */
.input_calendar_vfz_outer_wrap .calendar_vfz_years_wrap::-ms-scrollbar-thumb {
    background-color: #aaa;
    border-radius: 4px;
}


.input_calendar_vfz_outer_wrap .calendar_vfz_years_wrap .calendar_vfz_years_container {
    position: relative;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-auto-rows: min-content;
    gap: 2px;
    min-height: 100%;
    overflow: hidden;
    padding: 10px 5px 10px 10px;
    box-sizing: border-box;
}

.input_calendar_vfz_outer_wrap .calendar_vfz_years_wrap .calendar_vfz_year {
    display: block;
    color: var(--calendar-body-year-text-color);
    text-align: center;
    cursor: pointer;
    font-size: var(--calendar-year-font-size);
    border: 1px solid rgba(255, 255, 255, 0.2);
    border-radius: 10px;
    backdrop-filter: blur(10px);
    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
    padding: 10px;
    transform: scale(1);
    transition: background-color 0.2s ease, border-color 0.2s ease, transform 0.2s ease;
}

.input_calendar_vfz_outer_wrap .calendar_vfz_years_wrap .calendar_vfz_year:hover {
    background-color: #f0f0f096;
    border-color: #aaa;
    z-index: 1;
    transform: scale(1.1);
}


.input_calendar_vfz_outer_wrap .calendar_vfz_years_wrap .calendar_vfz_year.calendar_vfz_active_year {
    background-color: var(--calendar-active-year-bg);
    color: var(--calendar-active-year-color);
}





/* MOBILE */
.calendar_vfz_overlay_for_mobile {
    display: none !important;
    z-index: -1 !important;
}

@media (max-width: 567px) {
    .input_calendar_vfz_outer_wrap {
        position: fixed;
        left: 50% !important;
        top: 50% !important;
        max-width: 300px;
        width: 90%;
        min-width: 230px;
        transform: translate(-50%, -50%);
    }

    .calendar_vfz_overlay_for_mobile {
        position: fixed !important;
        display: block !important;
        height: 100dvh !important;
        width: 100dvw !important;
        top: 0 !important;
        left: 0 !important;
        background-color: rgba(0, 0, 0, 0.3);
        z-index: 9999 !important;
    }
}

